Commit controller - model - yaml
1 -pattern_controller: insert function: insert, getPatternByID
2 - pattern_model:  update function: add and find
3 - site_model:  new file
4 - swagger: add user - site
