# project/RealEstate/api/controllers/patterns_controller.js
@@ -9,7 +9,9 @@ const patternModel = new PatternModelClass();
 module.exports = {
     getAllPatterns: getAllPatterns,
     updatePatterns: updatePatterns,
-    deletePatterns: deletePatterns
+    deletePatterns: deletePatterns,
+    insertPattern: insertPattern,
+    getPatternsByID: getPatternsByID
 };
 
 // Controller lấy hết tất cả patterns có trong database
@@ -90,6 +92,79 @@ function deletePatterns(req, res, next) {
         }
         res.json(relsutsJson);
     });
+}
+
+//Insert patterns
+function insertPattern(req, res, next)
+{
+    var results = {
+        success: 1,
+        data: [],
+        description: "Insert success"
+    };
+   // var patternID = req.swagger.params["patternID"].value;
+    var patternCategoryID = req.swagger.params.patternCategoryID.value.patternCategoryId;
+    var patternRegex = req.swagger.params.patternCategoryID.value.patternRegex;
+    var siteID = req.swagger.params.patternCategoryID.value.siteId;
+    
+    if (patternCategoryID && patternRegex && siteID) {
+        var datas = [
+            parseInt(patternCategoryID),
+            patternRegex,
+            parseInt(siteID)
+        ];
+
+        patternModel.add(datas, function (success) {
+            console.log("Check: " + success);
+            if (!success) {
+                results.success = 0;
+                results.description = "Cannot insert data into database !";
+            }
+            res.json(results);
+        });
+    }
+} 
+
+
+// Controller lấy patterns theo patternID có trong database
+function getPatternsByID(req, res, next) {
+    var results = {
+        success: 1,
+        patterns: [],
+        description: "OK"
+    };
+    var typeQuery = req.swagger.params.typeQuery.value;
+    //console.log(typeQuery);
+    var valueQuery = req.swagger.params.values.value;
+    console.log(valueQuery);
+    var values = [];
+    for(var i = 0; i < valueQuery.length;i++)
+    {
+        values.push([parseInt(valueQuery[i])]);
+
+    }
+    console.log(values);
+    patternModel.find(typeQuery,values,function (rows) {
+        if (rows != -1) {
+            rows.forEach(row => {
+                var pattern = {
+                    patternId: row.pattern_id,
+                    patternCategoryId: row.pattern_category_id,
+                    patternRegex: row.pattern_regex,
+                    patternCategoryName: row.patt_category_name,
+                    siteId: row.site_id
+                };
+
+                results.patterns.push(pattern);
+            });
+            res.json(results);
+            } else {
+                results.success = 0;
+                results.description = "Error";
+                res.json(results);
+            }
+        });
+    
 }
 
 
