# project/RealEstate/api/swagger/swagger.yaml
@@ -18,6 +18,7 @@ consumes:
 produces:
   - application/json
 paths:
+  
   # Pattern API
   /Pattern:
     x-swagger-router-controller: patterns_controller
@@ -37,6 +38,7 @@ paths:
     post:
       summary: Thêm pattern mới
       description: Thêm mới 1 pattern
+      operationId: insertPattern
       parameters:
         - name: patternCategoryID
           in: body
@@ -57,14 +59,14 @@ paths:
     get:
       summary: Tìm pattern theo tiêu chí
       description: Tìm pattern theo từng tiêu chí.
+      operationId: getPatternsByID
       parameters:
         - name: "typeQuery"
-          type: "number"
-          minimum: 0
-          maximum: 3
+          type: "integer"
+          maximum: 4
           in: "query"
           required: true
-          description: "Find By: 0 - patternID,\r\n 1 - SiteID,\r\n 2 - PatternCategoryID,\r\n 3 - SiteID and PatternCategoryID"
+          description: "Find By: 1 - patternID,\r\n 2 - SiteID,\r\n 3 - PatternCategoryID,\r\n 4 - SiteID and PatternCategoryID"
         - name: "values"
           in: "query"
           required: true
@@ -142,6 +144,101 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
   
+  #Site API
+  /Site:
+    x-swagger-router-controller: sites_controller
+    get:
+      summary: Lấy hết tất cả sites 
+      description: Lấy tất cả sites có trong database
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SitesResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      summary: Thêm site mới
+      description: Thêm mới 1 site
+      parameters:
+        - name: "payload"
+          in: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/SiteURLRequest"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+      
+  /Site/{siteID}:
+    x-swagger-router-controller: sites_controller
+    get:
+      summary: Lấy ra site theo siteID
+      description: Lấy ra site theo siteID
+      parameters:
+        - name: siteID
+          type: number
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/SitesResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    
+    put:
+      summary: Cập nhật site
+      description: Cập nhật site theo siteID
+      parameters:
+        - name: siteID
+          in: path
+          required: true
+          type: number
+        - name: payload
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/SitesResponse"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      summary: Xóa site
+      description: Xóa site theo siteID
+      parameters:
+        - name: siteID
+          in: path
+          required: true
+          type: number
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"        
+            
+  
   # Crawler API
   /Crawler/CollectDetailURL:
     x-swagger-router-controller: crawler_controller
@@ -197,6 +294,58 @@ paths:
           description: "Error"
           schema:
             $ref: "#/definitions/ErrorResponse"
+            
+    #User API       
+  
+  #User API
+  /User:
+    x-swagger-router-controller: user_controller
+    get:
+      summary: Lấy hết tất cả user
+      description: Lấy hết tất cả user hiện có trong database
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/UserResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      summary: Thêm user vào database
+      description: Thêm user vào database
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
+  /User/{userID}:
+    x-swagger-router-controller: user_controller
+    get:
+      summary: Lấy ra user theo userID
+      description: Lấy ra user theo userID
+      parameters:
+        - name: userID
+          type: number
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Users"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    
+            
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -258,6 +407,19 @@ definitions:
       - patternCategoryId
       - patternRegex
       - siteId
+  SitesResponse:
+    type: object
+    properties:
+      siteID:
+        type: number
+      siteName:
+        type: string
+      siteURL:
+        type: string
+      description:
+        type: string
+        description: Mo ta
+      
   PatternsResponse:
     required:
       - patterns
@@ -283,5 +445,75 @@ definitions:
       description:
         type: string
         description: Mo ta
+        
+  SiteURLRequest:
+    type: object
+    properties:
+      siteName:
+        type: string
+        description: "Tên site cần thêm vào"
+      siteURL:
+        type: object
+        properties:
+          site_name:
+            type: string
+            description: Tên site cần thêm vào
+          site_url:
+            type: string
+            description: url của site cần thêm vào 
+          site_url_categories:
+            type: array
+            description: Mảng các các url
+            items:
+              type: object
+              properties:
+                category_name:
+                  type: string
+                  description: Tên danh mục của url cần thêm
+                category_url:
+                  type: string
+                  description: url của danh mục
+          type_page_url:
+            type: string
+            description: Loại trang khi chuyển sang trang khác      
+    required:
+      - siteName
+      - siteURL
+  UserResponse:
+    required:
+      - users
+    properties:
+      success: 
+        type: number
+        description: Tra ve 1 neu thanh cong, Tra ve 0 neu that bai
+      users:
+        type: array
+        items:
+          type: object
+          properties:
+            userID:
+              type: number
+            userName:
+              type: number
+            userPassword:
+              type: string
+            userToken:
+              type: string
+      description:
+        type: string
+        description: Mo ta
+  Users:
+    type: object
+    properties:
+      userID:
+        type: number
+        description: ID của user
+      userName:
+        type: string
+        description: Tên của người dùng
+    required:
+      - userID
+      - userName
+    
   
       
